added borders to private print method helpers in CLInterface.java